# fuel_exploration

./: .gitignore  README.md
src/fuel_exploration/: CMakeLists.txt  package.xml
src/fuel_exploration/include/fuel_exploration/common/: navigation_utils.hpp  occupancy_grid_utils.hpp  robot_pose_transform.hpp
src/fuel_exploration/include/fuel_exploration/controller/: exploration_controller_config.hpp  exploration_controller_state.hpp  path_tracking.hpp
src/fuel_exploration/include/fuel_exploration/frontier/: frontier_algorithms.hpp  frontier_detector_config.hpp  frontier_detector_state.hpp  frontier_goal_selection.hpp  frontier_map_processing.hpp  frontier_path_messages.hpp  frontier_types.hpp  frontier_visualization.hpp
src/fuel_exploration/launch/: exploration_nodes.launch.py  simulation.launch.py
src/fuel_exploration/src/: exploration_controller.cpp  frontier_detector.cpp
src/fuel_exploration/src/common/: navigation_utils.cpp  occupancy_grid_utils.cpp  robot_pose_transform.cpp
src/fuel_exploration/src/controller/: path_tracking.cpp
src/fuel_exploration/src/frontier/: frontier_algorithms.cpp  frontier_goal_selection.cpp  frontier_map_processing.cpp  frontier_path_messages.cpp  frontier_visualization.cpp
src/fusion_bot_description/: CMakeLists.txt  package.xml
src/fusion_bot_description/config/: ekf.yaml
src/fusion_bot_description/launch/: rtabmap_slam.launch.py  simulation.launch.py
src/fusion_bot_description/models/fusion_bot/: model.config  model.sdf
src/fusion_bot_description/urdf/: fusion_bot.urdf.xacro
