cmake_minimum_required(VERSION 3.8)
project(fuel_exploration)

set(CMAKE_CXX_STANDARD 17)


if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()



# find dependencies
find_package(ament_cmake REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(rclcpp REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(visualization_msgs REQUIRED)

add_executable(frontier_detector src/frontier_detector.cpp)
ament_target_dependencies(frontier_detector geometry_msgs rclcpp nav_msgs std_msgs tf2 tf2_geometry_msgs tf2_ros visualization_msgs)
add_executable(exploration_controller src/exploration_controller.cpp)
ament_target_dependencies(exploration_controller geometry_msgs rclcpp nav_msgs tf2 tf2_geometry_msgs tf2_ros)
install(TARGETS frontier_detector DESTINATION lib/${PROJECT_NAME})
install(TARGETS exploration_controller DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
